@@ -6,12 +6,9 @@
 package com.mfvanek.money.transfer.utils.generators;
 
 import com.mfvanek.money.transfer.repositories.Context;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.extern.slf4j.Slf4j;
 
-import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.concurrent.ConcurrentLinkedQueue;
@@ -23,10 +20,10 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 import java.util.concurrent.atomic.AtomicInteger;
 
+@Slf4j
 abstract class AbstractGenerator {
 
     private static final int AWAIT_PERIOD = 10; // in seconds
-    static final Logger logger = LoggerFactory.getLogger(AbstractGenerator.class);
 
     final AtomicInteger counter;
     final Context context;
@@ -54,20 +51,20 @@ abstract class AbstractGenerator {
     final List<Long> generate() {
         final long timeStart = System.nanoTime();
         try {
-            logger.info("Generating {}", message);
+            log.info("Generating {}", message);
             final ExecutorService threadPool = Executors.newFixedThreadPool(threadPoolSize);
             final List<Future<?>> futures = doGenerate(threadPool);
             threadPool.shutdown();
             waitForCompletion(futures);
         } finally {
             final long timeEnd = System.nanoTime();
-            logger.info("Generation {} is completed. Time elapsed = {} microseconds", message, (timeEnd - timeStart) / 1_000);
+            log.info("Generation {} is completed. Time elapsed = {} microseconds", message, (timeEnd - timeStart) / 1_000);
         }
-        return Collections.unmodifiableList(new ArrayList<>(ids));
+        return List.copyOf(ids);
     }
 
     private void waitForCompletion(final List<Future<?>> futures) {
-        logger.info("Waiting for completion from {} tasks...", futures.size());
+        log.info("Waiting for completion from {} tasks...", futures.size());
         int processed = 0;
         int batch = 0;
         final int threshold = futures.size() / 10;
@@ -75,14 +72,14 @@ abstract class AbstractGenerator {
             try {
                 future.get(AWAIT_PERIOD, TimeUnit.SECONDS);
             } catch (InterruptedException | ExecutionException | TimeoutException e) {
-                logger.error(e.getMessage(), e);
+                log.error("Error occurred while awaiting", e);
             } finally {
                 ++processed;
                 ++batch;
             }
             if (batch >= threshold) {
                 final int percentage = processed * 100 / futures.size();
-                logger.info("Completed {}%...", percentage);
+                log.info("Completed {}%...", percentage);
                 batch = 0;
             }
         }
